--- a/Ceriyo.Infrastructure/packages.config
+++ b/Ceriyo.Infrastructure/packages.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="4.6.0" targetFramework="net461" />
-  <package id="AutoMapper" version="6.1.0" targetFramework="net461" />
+  <package id="Autofac" version="4.6.1" targetFramework="net461" />
+  <package id="AutoMapper" version="6.1.1" targetFramework="net461" />
   <package id="EmptyKeysUI_MonoGame" version="3.0.0" targetFramework="net461" />
-  <package id="FluentValidation" version="7.0.3" targetFramework="net461" />
-  <package id="jint" version="2.10.4" targetFramework="net461" />
+  <package id="FluentValidation" version="7.1.1" targetFramework="net461" />
+  <package id="Jint" version="2.11.23" targetFramework="net461" />
   <package id="Lidgren.Network" version="1.0.2" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="MonoGame.Framework.WindowsDX" version="3.6.0.1625" targetFramework="net461" />
   <package id="NLua" version="1.3.2.1" targetFramework="net461" />
-  <package id="protobuf-net" version="2.2.1" targetFramework="net461" />
+  <package id="protobuf-net" version="2.3.2" targetFramework="net461" />
   <package id="System.Diagnostics.Contracts" version="4.3.0" targetFramework="net461" />
 </packages>
